--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -9,8 +9,7 @@
     .container{
       display: flex;
       flex-direction: column;
-
-
+      
       .header_content{
         display: flex;
         align-items: center;
@@ -29,6 +28,9 @@
           align-items: center;
           justify-content: center;
           width: 240px;
+          @include devices-max-width-992px{
+            width: 180px;
+          }
 
           h1{
             @include clear;
@@ -190,6 +192,7 @@
           }
           @include devices-max-width-992px{
             font-size: 16px;
+            width: 180px;
           }
 
           i{
